test: add service and config tests